--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset=utf-8>
 		<title>faithfull</title>
+		<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
 		<link rel="stylesheet" href="master.css">
 	</head>
 	<body>
 
 <header>
-		
+
 </header>
 
 
